--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>reset.css">
 </head>
 
 <body>
