--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <%= htmlWebpackPlugin.options.title %>
     </title>
     <link rel="stylesheet" href="<%= BASE_URL %>reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_3112357_y3yl0a8bla8.css">
 </head>
 
 <body>
